// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarksReducer should return initial state 1`] = `
Object {
  "architectures": Object {
    "errors": null,
    "results": Array [],
    "status": "PENDING",
  },
  "currentQuery": "",
}
`;

exports[`BookmarksReducer should set search query 1`] = `
Object {
  "architectures": Object {
    "errors": null,
    "results": Array [],
    "status": "RESOLVED",
  },
  "currentQuery": "this is a query",
}
`;

exports[`BookmarksReducer should show errors 1`] = `
Object {
  "architectures": Object {
    "errors": "This is error",
    "results": Array [],
    "status": "ERROR",
  },
  "currentQuery": "",
}
`;

exports[`BookmarksReducer should start loading on bookmarks request 1`] = `
Object {
  "architectures": Object {
    "errors": null,
    "results": Array [],
    "status": "PENDING",
  },
  "currentQuery": "",
}
`;

exports[`BookmarksReducer should stop loading on bookmarks success 1`] = `
Object {
  "architectures": Object {
    "errors": null,
    "results": Array [
      Object {
        "controller": "architectures",
        "name": "my bookmark",
        "query": "name ~ random",
      },
    ],
    "status": "RESOLVED",
  },
  "currentQuery": "",
}
`;

exports[`BookmarksReducer should update after form submission 1`] = `
Object {
  "architectures": Object {
    "errors": null,
    "results": Array [
      Object {
        "controller": "architectures",
        "id": 42,
        "name": "new bookmark",
        "public": true,
        "query": "random query",
      },
    ],
    "status": "RESOLVED",
  },
  "currentQuery": "",
  "showModal": false,
}
`;
